fixed daterangepicker misposition on small screens
Summary: added "placement" prop to customize daterangepicker opening location

Test Plan: use daterangepicker when creating new course

Reviewers: nnarayen, aleks

Reviewed By: aleks

Subscribers: bigblue, neezus, generic, caseytaco

Projects: #bizworld

Differential Revision: http://phab.calblueprint.org/D242

--- a/app/assets/stylesheets/partials/_modal.scss
+++ b/app/assets/stylesheets/partials/_modal.scss
@@ -42,6 +42,11 @@
     width: 50%;
   }
 
+  .date-select .date-input-container {
+    padding: 0;
+    min-width: auto;
+  }
+
   &.delete-text {
     color: $red;
     font-size: $f-size-md;
